# tess-asteroid-ml

./: .gitignore  README.md  pyproject.toml
data/jpl/: jpl_small_bodies_tess_s0002-1-0_catalog.csv  jpl_small_bodies_tess_s0003-1-0_catalog.csv  (+2 more)
notebooks/: TESSblends_studycase.ipynb  all-sky_figure_asteroids.ipynb  all-sky_figure_asteroids_fixed_bkg.ipynb  asteroid_lightcurve_dev.ipynb  asteroid_lightcurve_from_name.ipynb  asteroid_track_lenght.ipynb  binary_asteroids_tess_observ.ipynb  bkg-model-for-amy-cleaner.ipynb  check_asteroid_db.ipynb  check_for_asteroids_near_3i_contingency_mode.ipynb  check_training_data.ipynb  count_candidate_tracks.ipynb  create_FFI_asteroid_track_db.ipynb  create_mosaic.py  debug_asteroid_cutouts.ipynb  dev_create_asteroidcuts.ipynb  dev_create_asteroidcuts_tessrip.ipynb  dev_tess_background.ipynb  dev_unet.ipynb  fix_track_gaps.ipynb  get_asteroid_mtpfs.ipynb  get_mTPF_from_asteroid_name.ipynb  get_tesscut_with_asteroid.ipynb  inspect_quat_sector.ipynb  inspect_tess_ffi_cutouts.ipynb  jpl_sector_query-Copy1.ipynb  jpl_sector_query.ipynb  make_asteroid_movie.ipynb  make_data_transormer.ipynb  make_nnpred_movie.ipynb  make_tess_all_sky_asteroid_figures.ipynb  merge_asteroid_catalogs.ipynb  merge_sbident_sector_catalogs.ipynb  paper_plots.ipynb  plot_asteroid_mask.ipynb  plot_code_to_Jorge-Copy1.ipynb  plot_code_to_Jorge.ipynb  plot_tess_camera_asteroid_tracks.ipynb  tess-asteroids_test.ipynb  tess_all_cycles_asteroids.ipynb  (+4 more)
tess_asteroid_ml/: __init__.py  animate_training_cubes.py  asteroid_tess_ccut.py  get_TESScut_asteroids.py  make_TESS_asteroid_db.py  make_TESS_asteroid_db_lores.py  make_TESScut_asteroids.py  make_data_transormer.py  plot_asteroid_mask.py  tess_ffi_cutout.py  utils.py
tests/: test_tess_asteroid_ml.py
(+6 files in other folders)
