[tool.poetry]
name = "tess-asteroid-ml"
version = "0.1.0"
description = "Tools to create a ML-ready dataset out of TESS FFIs to study asteroids."
authors = ["Jorge Martínez-Palomera <jorgemarpa@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.0"
matplotlib = "^3.6.3"
lightkurve = "^2.3.0"
fitsio = "^1.2.0"
astropy = "^5.2.0"
pandas = "^1.4.4"
numpy = "^1.23.0"
tqdm = "^4.51.1"
tess-ephem = "^0.4.0"
tess-cloud = "^0.5.0"
astrocut = { git = "https://github.com/spacetelescope/astrocut.git" }
sbident = { git = "https://github.com/bengebre/sbident.git" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.2"
flake8 = "^3.8.1"
black = "^20.8b1"
ipympl = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
